Fix create closed group overflow on small screen

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -1589,6 +1589,7 @@ input {
   @media (max-height: 804px) {
     &__container {
       overflow-y: visible;
+      max-height: none;
     }
   }
 }
